src/objects/hed__Course_Offering__c.object
<CustomObject>
    <fields>
        <fullName>Class_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The class period for which this offering is taking place</description>
        <label>Class Period</label>
        <referenceTo>Class_Period__c</referenceTo>
        <relationshipLabel>Course Offerings</relationshipLabel>
        <relationshipName>Course_Offerings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The classroom/location where this course offering will be held</description>
        <label>Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Course Offerings</relationshipLabel>
        <relationshipName>Course_Offerings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence_of_Course__c</fullName>
        <description>If the course has parts, this controls the order. (EdFi req.)</description>
        <label>Sequence of Course</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>